feat: add HOME button with corresponding CSS styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="assets/timer-challenge.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer Challenge</title>
+    <script
+      src="https://kit.fontawesome.com/9dbd66e9ce.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="modal"></div>
@@ -12,6 +16,12 @@
       <header>
         <h1>The <em>Almost</em> Final Countdown</h1>
         <p>Stop the timer once you estimate that time is (almost) up</p>
+        <a href="https://react-project-mini-games-collection.onrender.com/">
+          <button id="home-button">
+            <i class="fa-solid fa-house fa-sm home-icon"></i>
+            <span class="home-text"> home</span>
+          </button>
+        </a>
       </header>
       <div id="root"></div>
     </div>
